# iron

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: grammar.md
examples/: hello.fe  hello.fe.out  module.fe  tokens.fe  tokens.fe.out
examples/byte/: module.fe
forge/: Cargo.toml
forge/src/: main.rs
iron_ast/: Cargo.toml
iron_ast/src/: ast.rs  lib.rs
iron_codegen/: Cargo.toml
iron_codegen/src/: error.rs  lib.rs
iron_codegen_llvm/: Cargo.toml
iron_codegen_llvm/src/: lib.rs
iron_lexer/: Cargo.toml
iron_lexer/src/: advance.rs  consume.rs  error.rs  into_tokens.rs  lib.rs  tokenize_file.rs
iron_lexer/src/token/: coordinate.rs  keyword.rs  kind.rs  mod.rs
iron_libraries/core/collections/: module.fe
iron_libraries/core/primitives/: module.fe
iron_libraries/core/protocols/: module.fe
iron_libraries/standard/: module.fe
iron_libraries/standard/io/: print.fe
iron_libraries/standard/networking/: module.fe
iron_parser/: Cargo.toml
iron_parser/src/: error.rs  expression.rs  lib.rs  module.rs  op.rs
src/: main.rs
src/module/: mod.rs
src/module/lexer/: advance.rs  into_tokens.rs  into_tokens_string.rs  mod.rs  tokenize_file.rs
src/module/token/: mod.rs
standard/: module.fe
standard/core/: module.fe
standard/core/collections/: array.fe
standard/core/primitives/: boolean.fe  integers.fe
standard/core/protocols/: expressable.fe  option.fe  result.fe
standard/hardware/: clock.fe  gates.fe  module.fe  signal.fe
standard/io/: module.fe
standard/networking/http/: error.fe  method.fe  module.fe  (+1 more)
(+4 files in other folders)
